<resources>
    <string name="app_name">Paladin</string>

    <string name="default_open">Open door</string>
    <string name="default_close">Close door</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Still not implemented</string>

    <string name="title_toolbar">PALADIN</string>
    <string name="title_users">Users</string>
    <string name="title_settings">Settings</string>
    <string name="title_schedules">Schedules</string>
    <string name="title_main">Main</string>
    <string name="door_one_label">Door 1</string>
    <string name="door_two_label">Door 2</string>
    <string name="recent">Recent: </string>
    <string name="open_label">Open:</string>
    <string name="close_label">Close:</string>
    <string name="subtile_toolbar">by NANOSPARK</string>
    <string name="unknown_label">Unknown</string>
    <string name="not_available">n/a</string>
    <string name="opened_label">Opened</string>
    <string name="closed_label">Closed</string>
    <string name="start_voice_recognition_msg">Starting voice recognition...</string>
    <string name="sms_suspend_msg">Excessive text message use, text message control and notifications  have been suspended.  Tap OK to re-enable or  CANCEL to leave  suspended (you can re-enable later under Settings-Enable SMS  control).</string>
    <string name="warning_label">Warning</string>
    <string name="opened_for_label">opened for </string>
    <string name="closed_for_label">closed for </string>
    <string name="hours_label">hours</string>
    <string name="minutes_label">minutes</string>
    <string name="seconds_label">seconds</string>
    <string name="save_file_log_msg">Saving File</string>
    <string name="error_save_log_msg">Error creating file</string>
    <string name="date_label">Date</string>
    <string name="event_label">Event</string>
    <string name="board_disconnected_msg">Board has been disconnected.</string>
    <string name="board_connected_msg">Board has been connected.</string>
    <string name="no_record_msg">No records to display</string>
    <string name="door_label">Door</string>
    <string name="receive_alerts_label">Receive Alerts</string>
    <string name="time_limits_label">Time limits </string>
    <string name="start_label">Start: </string>
    <string name="end_label">End: </string>
    <string name="repeat_only_every_week_label">Repeat every other week</string>
    <string name="repeat_label">Repeat every </string>
    <string name="weeks_label">weeks</string>
    <string name="require_password_label">Require Password</string>
    <string name="notify_door_activity_label">Notify me of door activity</string>
    <string name="new_user_label">New User</string>
    <string name="new_schedule_label">New Schedule</string>
    <string name="save_label">Save</string>
    <string name="error_time_msg">The end time must be greater than the start time</string>
    <string name="error_date_msg">The end date must be greater than the start date</string>
    <string name="field_empty_msg">%1$s field can not be empty</string>
    <string name="name_label">Name</string>
    <string name="phone_label">Phone</string>
    <string name="passcode_label">Passcode:</string>
    <string name="hint_time_limits">________</string>
    <string name="error_name_msg">A user already exists with that name</string>
    <string name="error_name_invalid">Name is invalid</string>
    <string name="empty_users_msg">No users</string>
    <string name="empty_schedules">No schedules</string>
    <string name="notify.open">Open</string>
    <string name="notify.close">Close</string>
    <string name="notify.all">All</string>
    <string name="notify.none">None</string>
    <string name="repeat.daily">Daily</string>
    <string name="repeat.weekly">Weekly</string>
    <string name="limit.forever">Forever</string>
    <string name="limit.date">Date</string>
    <string name="limit.events">Number of events</string>
    <string name="caution_sms"><![CDATA[ <b>Caution!!!</b> Changing the phone number can disrupt your Text Message control and alerts. <br>Please only proceed if you\'re sure you know what you\'re doing ]]></string>
    <string name="version">version %1$s (%2$s)</string>
    <string name="unit.metric">°C</string>
    <string name="unit.imperial">°F</string>
    <string name="settings">Settings</string>
    <string name="create_user">New User</string>
    <string name="create_schedule">New Schedule</string>
    <string name="logs">Logs</string>

</resources>
