<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="0.5"
    android:fillViewport="true"
    tools:showIn="@layout/fragment_create_user">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/name_label"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/text_color_bold"
            tools:text="Luke" />

        <EditText
            android:id="@+id/edittext_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter 10 digit phone number"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/checkbox_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:checked="false"
            android:text="@string/require_password_label"
            android:textColor="@color/text_color_bold"
            android:textSize="16dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:paddingBottom="5dp"
                android:text="Passcode:"
                android:textColor="@color/text_color_pass"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/edittext_password"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:maxLength="4" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkbox_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/notify_door_activity_label"
            android:textColor="@color/text_color_bold"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_door_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:minWidth="100dp"
            android:spinnerMode="dropdown" />

        <CheckBox
            android:id="@+id/checkbox_time_limits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:checked="false"
            android:text="@string/time_limits_label"
            android:textColor="@color/text_color_bold"
            android:textSize="16dp"
            android:textStyle="bold" />
        
        <include layout="@layout/repeat_layout" />
    </LinearLayout>

</ScrollView>