<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    android:layout_marginBottom="20dp">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_time_limits"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:scaleType="fitCenter"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/start_label"
        android:id="@+id/textView8"
        android:layout_alignBottom="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_alignTop="@+id/imageView"
        android:textStyle="bold"
        android:textColor="@color/text_color_bold"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textview_start_time"
        android:textColor="@color/text_color_bold"
        android:gravity="center"
        android:layout_alignBottom="@+id/textView8"
        android:layout_toRightOf="@+id/textView8"
        android:layout_toEndOf="@+id/textView8"
        android:layout_alignTop="@+id/textView8"
        android:layout_marginLeft="5dp"
        android:visibility="visible"
        android:hint="@string/hint_time_limits"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textview_end_time"
        android:textColor="@color/text_color_bold"
        android:gravity="center"
        android:layout_alignBottom="@+id/textview_start_time"
        android:layout_alignTop="@+id/textview_start_time"
        android:layout_marginLeft="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="80dp"
        android:visibility="visible"
        android:hint="@string/hint_time_limits"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/end_label"
        android:id="@+id/textView12"
        android:textStyle="bold"
        android:textColor="@color/text_color_bold"
        android:gravity="center"
        android:layout_alignTop="@+id/textview_end_time"
        android:layout_toLeftOf="@+id/textview_end_time"
        android:layout_toStartOf="@+id/textview_end_time"
        android:layout_alignBottom="@+id/textview_end_time"/>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/imageView2"
        android:src="@drawable/ic_calendar"
        android:scaleType="matrix"
        android:layout_below="@+id/imageView"
        android:layout_toLeftOf="@+id/textView8"
        android:layout_toStartOf="@+id/textView8"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/start_label"
        android:id="@+id/textView13"
        android:textStyle="bold"
        android:textColor="@color/text_color_bold"
        android:gravity="center"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2"
        android:layout_below="@+id/textView8"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textview_start_day"
        android:textColor="@color/text_color_bold"
        android:gravity="center"
        android:layout_alignBottom="@+id/textView13"
        android:layout_toRightOf="@+id/textView13"
        android:layout_toEndOf="@+id/textView13"
        android:layout_below="@+id/textview_start_time"
        android:layout_marginLeft="5dp"
        android:visibility="visible"
        android:hint="@string/hint_time_limits"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/end_label"
        android:id="@+id/textView15"
        android:textStyle="bold"
        android:textColor="@color/text_color_bold"
        android:gravity="center"
        android:layout_alignBottom="@+id/textview_start_day"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12"
        android:layout_below="@+id/textView12"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textview_end_day"
        android:textColor="@color/text_color_bold"
        android:gravity="center"
        android:layout_alignBottom="@+id/textView15"
        android:layout_toRightOf="@+id/textView15"
        android:layout_toEndOf="@+id/textView15"
        android:layout_below="@+id/textview_end_time"
        android:layout_marginLeft="5dp"
        android:visibility="visible"
        android:hint="@string/hint_time_limits"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/days_container"
        android:layout_below="@+id/imageView2"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fb_day_sun"
            android:src="@drawable/ic_sun"
            android:scaleType="center"
            />
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fb_day_mon"
            android:src="@drawable/ic_mon"
            android:scaleType="center"
            app:rippleColor="@color/white"
            />
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fb_day_tue"
            android:src="@drawable/ic_tue"
            android:scaleType="center"
            app:rippleColor="@color/white"
            />
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fb_day_wed"
            android:src="@drawable/ic_wed"
            android:scaleType="center"
            app:rippleColor="@color/white"
            />
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fb_day_thr"
            android:src="@drawable/ic_thr"
            android:scaleType="center"
            app:rippleColor="@color/white"
            />
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fb_day_fri"
            android:src="@drawable/ic_fri"
            app:rippleColor="@color/white"
            android:scaleType="center"/>
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fb_day_sat"
            android:src="@drawable/ic_sat"
            android:scaleType="center"
            app:rippleColor="@color/white"
            />
    </LinearLayout>

    <android.support.v7.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_repeat_every_day"
        android:layout_marginTop="20dp"
        android:text="@string/repeat_only_every_day_label"
        android:checked="false"
        android:layout_below="@+id/days_container"
        android:layout_alignLeft="@+id/textview_start_day"
        android:layout_alignStart="@+id/textview_start_day"
        app:buttonTint="@color/red"
        android:textColor="@color/text_color_bold"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_repeat"
        android:layout_below="@+id/checkbox_repeat_every_day"
        android:layout_alignLeft="@+id/checkbox_repeat_every_day"
        android:layout_alignStart="@+id/checkbox_repeat_every_day"
        android:layout_marginTop="26dp"
        android:text="@string/repeat_label"
        android:checked="false"
        android:textColor="@color/text_color_bold"
        android:textStyle="bold"
        android:textSize="16sp"
        app:buttonTint="@color/red"
        />

    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_events"
        android:layout_alignBottom="@+id/checkbox_repeat"
        android:layout_alignTop="@+id/checkbox_repeat"
        android:spinnerMode="dropdown"
        android:layout_toRightOf="@+id/textview_start_day"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/weeks_label"
        android:id="@+id/textView10"
        android:layout_alignBottom="@+id/spinner_events"
        android:layout_toRightOf="@+id/spinner_events"
        android:layout_toEndOf="@+id/spinner_events"
        android:layout_alignTop="@+id/spinner_events"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/text_color_bold"
        android:layout_marginLeft="30dp"/>

</RelativeLayout>