<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardview_door"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/cardview_background"
        card_view:cardCornerRadius="4dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="false"
        card_view:contentPadding="0dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"

            >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/linearLayout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Luke Jhon Obama Keneddy Smith"
                        android:id="@+id/textview_user_name"
                        android:layout_weight="0.2"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/text_color_bold"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageview_menu"
                        android:src="@drawable/ic_menu_owerflow"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="(715) 378 4568"
                    android:id="@+id/textview_phone"
                    android:layout_below="@+id/linearLayout"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/red"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/user_divider"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="90dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageview_receive_alerts"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_alert_disabled"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/receive_alerts_label"
                    android:id="@+id/textView5"
                    android:layout_alignTop="@+id/imageview_receive_alerts"
                    android:layout_toRightOf="@+id/imageview_receive_alerts"
                    android:layout_toEndOf="@+id/imageview_receive_alerts"
                    android:layout_marginLeft="10dp"
                    android:layout_alignBottom="@+id/imageview_receive_alerts"
                    android:gravity="center"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:layout_below="@+id/imageview_receive_alerts"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_time_limits"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/time_limits_label"
                    android:id="@+id/textView6"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_alignBottom="@+id/imageView3"
                    android:layout_alignLeft="@+id/textView5"
                    android:layout_alignStart="@+id/textView5"
                    android:layout_alignTop="@+id/imageView3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/unknown_label"
                    android:id="@+id/textview_time_limits"
                    android:layout_alignTop="@+id/textView6"
                    android:layout_toEndOf="@+id/textView6"
                    android:layout_alignParentBottom="true"
                    android:layout_toRightOf="@+id/textView6"
                    android:layout_marginLeft="5dp"
                    android:paddingTop="3.5dp"/>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>